[gd_scene load_steps=24 format=3 uid="uid://bb1e018s8kwu7"]

[ext_resource type="Texture2D" uid="uid://diukfgrcpw6sy" path="res://Sprites/Tilesets/Stage Select.png" id="1_khlxf"]
[ext_resource type="Script" path="res://Scenes/stage_select.gd" id="1_v0p28"]
[ext_resource type="Texture2D" uid="uid://be7afqj7g3eow" path="res://Sprites/Menus/Stage Select - Sprites.png" id="2_pk014"]
[ext_resource type="Script" path="res://Scenes/Robot Master Portraits.gd" id="3_dtooj"]
[ext_resource type="Texture2D" uid="uid://c36ibssucboa3" path="res://Sprites/Menus/airpic.png" id="4_etxjm"]
[ext_resource type="Texture2D" uid="uid://cx2hc3npwbfsq" path="res://Sprites/Menus/mengopic.png" id="5_d13ei"]
[ext_resource type="Texture2D" uid="uid://bxyk8yxkbam44" path="res://Sprites/Menus/pumppic.png" id="6_xowim"]
[ext_resource type="Texture2D" uid="uid://dflaoj7u7edb1" path="res://Sprites/Menus/Stage Select - Bass.png" id="7_l4mmt"]
[ext_resource type="PackedScene" uid="uid://b0opfnom6gmbo" path="res://module_tester.tscn" id="8_s4a3g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vytrk"]
texture = ExtResource("1_khlxf")
texture_region_size = Vector2i(8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
6:8/0 = 0
0:4/size_in_atlas = Vector2i(5, 5)
0:4/0 = 0
0:9/size_in_atlas = Vector2i(5, 1)
0:9/0 = 0
5:4/size_in_atlas = Vector2i(1, 5)
5:4/0 = 0
5:9/0 = 0
0:0/size_in_atlas = Vector2i(13, 3)
0:0/0 = 0
13:0/size_in_atlas = Vector2i(1, 3)
13:0/0 = 0
0:3/size_in_atlas = Vector2i(13, 1)
0:3/0 = 0
13:3/0 = 0

[sub_resource type="TileSet" id="TileSet_fwulp"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_vytrk")

[sub_resource type="AtlasTexture" id="AtlasTexture_ssum0"]
atlas = ExtResource("1_khlxf")
region = Rect2(6, 80, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfc76"]
atlas = ExtResource("1_khlxf")
region = Rect2(0, 32, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bf1ns"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssum0")
}],
"loop": false,
"name": &"Destroyed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfc76")
}],
"loop": false,
"name": &"Normal",
"speed": 5.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_aofde"]
load_path = "res://.godot/imported/Stage Select - Sprites.png-033db349e872b74e49c62f66cdcc2c53.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_b0o1p"]
atlas = SubResource("CompressedTexture2D_aofde")
region = Rect2(8, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvb6"]
atlas = ExtResource("2_pk014")
region = Rect2(48, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi4ae"]
atlas = ExtResource("2_pk014")
region = Rect2(88, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d42vf"]
atlas = ExtResource("2_pk014")
region = Rect2(128, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37ngv"]
atlas = ExtResource("2_pk014")
region = Rect2(208, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_daoew"]
atlas = ExtResource("2_pk014")
region = Rect2(248, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxkwp"]
atlas = ExtResource("2_pk014")
region = Rect2(288, 8, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxheb"]
atlas = ExtResource("2_pk014")
region = Rect2(328, 8, 32, 32)

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 448.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_v0p28")

[node name="BG color" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 896.0
offset_bottom = 512.0
color = Color(0.141176, 0.286275, 0.427451, 1)

[node name="Background" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_fwulp")
format = 2
layer_0/tile_data = PackedInt32Array(65542, 0, 0, 65549, 851968, 0, 196614, 0, 3, 196621, 851968, 3, 65557, 0, 0, 196629, 0, 3, 65564, 851968, 0, 196636, 851968, 3, 65572, 0, 0, 196644, 0, 3, 65579, 851968, 0, 196651, 851968, 3, 65587, 0, 0, 196659, 0, 3, 393224, 0, 0, 524296, 0, 3, 393231, 851968, 0, 524303, 851968, 3, 393239, 0, 0, 524311, 0, 3, 393246, 851968, 0, 524318, 851968, 3, 393254, 0, 0, 524326, 0, 3, 393261, 851968, 0, 524333, 851968, 3, 393269, 0, 0, 524341, 0, 3, 720906, 0, 0, 851978, 0, 3, 720913, 851968, 0, 851985, 851968, 3, 720921, 0, 0, 851993, 0, 3, 720928, 851968, 0, 852000, 851968, 3, 720936, 0, 0, 852008, 0, 3, 720943, 851968, 0, 852015, 851968, 3, 720951, 0, 0, 852023, 0, 3, 1114109, 0, 0, 1245181, 0, 3, 1048580, 851968, 0, 1179652, 851968, 3, 1048588, 0, 0, 1179660, 0, 3, 1048595, 851968, 0, 1179667, 851968, 3, 1048603, 0, 0, 1179675, 0, 3, 1048610, 851968, 0, 1179682, 851968, 3, 1048618, 0, 0, 1179690, 0, 3, 1048625, 851968, 0, 1179697, 851968, 3, 1048633, 0, 0, 1179705, 0, 3, 1441791, 0, 0, 1572863, 0, 3, 1376262, 851968, 0, 1507334, 851968, 3, 1376270, 0, 0, 1507342, 0, 3, 1376277, 851968, 0, 1507349, 851968, 3, 1376285, 0, 0, 1507357, 0, 3, 1376292, 851968, 0, 1507364, 851968, 3, 1376300, 0, 0, 1507372, 0, 3, 1376307, 851968, 0, 1507379, 851968, 3, 1376315, 0, 0, 1507387, 0, 3, 1703937, 0, 0, 1835009, 0, 3, 1703944, 851968, 0, 1835016, 851968, 3, 1703952, 0, 0, 1835024, 0, 3, 1703959, 851968, 0, 1835031, 851968, 3, 1703967, 0, 0, 1835039, 0, 3, 1703974, 851968, 0, 1835046, 851968, 3, 1703982, 0, 0, 1835054, 0, 3, 1703989, 851968, 0, 1835061, 851968, 3, 1703997, 0, 0, 1835069, 0, 3, 2031619, 0, 0, 2031626, 851968, 0, 2031634, 0, 0, 2031641, 851968, 0, 2031649, 0, 0, 2031656, 851968, 0, 2031664, 0, 0, 2031671, 851968, 0, 786427, 0, 0, 917499, 0, 3, 720898, 851968, 0, 851970, 851968, 3, 393216, 851968, 0, 524288, 851968, 3)

[node name="Foreground" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_fwulp")
format = 2
layer_0/tile_data = PackedInt32Array(589842, 393216, 4, 655379, 655360, 5, 655380, 393216, 4, 1769499, 393216, 8, 1769508, 393216, 8, 589840, 458752, 4, 1179664, 524288, 6, 589841, 589824, 5, 589843, 458752, 7, 1245203, 655360, 5, 589844, 655360, 4, 1245204, 393216, 4, 655381, 720896, 5, 1245205, 720896, 5, 589849, 720896, 6, 1769498, 393216, 8, 917531, 0, 4, 1114139, 0, 9, 655388, 655360, 5, 1769500, 393216, 8, 655389, 393216, 4, 1769501, 393216, 8, 655390, 720896, 5, 917534, 327680, 4, 1114142, 327680, 9, 1179681, 786432, 5, 589858, 524288, 6, 1769507, 393216, 8, 655397, 655360, 5, 1245221, 655360, 5, 1769509, 393216, 8, 655398, 393216, 4, 1245222, 393216, 4, 1769510, 393216, 8, 655399, 720896, 5, 1245223, 720896, 5, 589850, 393216, 5, 589851, 589824, 4, 589852, 655360, 4, 589853, 786432, 5, 589859, 655360, 5, 589860, 786432, 5, 589861, 786432, 4, 1179665, 851968, 4, 1179666, 393216, 4, 1179667, 458752, 6, 1179668, 524288, 5, 1179683, 393216, 5, 1179687, 393216, 5, 1179684, 786432, 4, 1179685, 393216, 4, 1179686, 655360, 5, 1179682, 458752, 6, 1179674, 589824, 6, 1179675, 655360, 4, 1179676, 524288, 6, 1179677, 589824, 6, 1769488, 786432, 4, 1769489, 393216, 4, 1769490, 589824, 5, 1769491, 655360, 4, 1835025, 786432, 6, 1835026, 786432, 5, 1835027, 655360, 5, 1835029, 720896, 5, 1835028, 393216, 4)

[node name="Borders" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Blaze Man" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(152, 48)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="Video Man" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(224, 48)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="Smog Man" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(296, 48)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="Shark Man" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(152, 120)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="Origami Man" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(296, 120)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="Gale Woman" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(152, 192)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="???? 2" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(224, 192)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="???? 3" type="AnimatedSprite2D" parent="Borders"]
position = Vector2(296, 192)
sprite_frames = SubResource("SpriteFrames_bf1ns")
animation = &"Normal"

[node name="Robot Master Portraits" type="Node2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("3_dtooj")

[node name="Blaze Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(152, 48)
texture = SubResource("AtlasTexture_b0o1p")

[node name="Video Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(224, 48)
texture = SubResource("AtlasTexture_2jvb6")

[node name="Smog Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(296, 48)
texture = SubResource("AtlasTexture_xi4ae")

[node name="Shark Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(152, 120)
texture = SubResource("AtlasTexture_d42vf")

[node name="Origami Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(296, 120)
texture = SubResource("AtlasTexture_37ngv")

[node name="Gale Woman" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(152, 192)
texture = SubResource("AtlasTexture_daoew")

[node name="???? 2" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(224, 192)
texture = SubResource("AtlasTexture_nxkwp")

[node name="???? 3" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(296, 192)
texture = SubResource("AtlasTexture_hxheb")

[node name="Air Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(152, 192)
texture = ExtResource("4_etxjm")

[node name="Mengo" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(224, 192)
scale = Vector2(0.125, 0.125)
texture = ExtResource("5_d13ei")

[node name="Pump Man" type="Sprite2D" parent="Robot Master Portraits"]
position = Vector2(296, 192)
texture = ExtResource("6_xowim")

[node name="Placeholder buttons" type="Node" parent="."]

[node name="Test Stage" type="Button" parent="Placeholder buttons"]
offset_left = 208.0
offset_top = 104.0
offset_right = 240.0
offset_bottom = 136.0

[node name="Air Man Stage" type="Button" parent="Placeholder buttons"]
offset_left = 136.0
offset_top = 176.0
offset_right = 168.0
offset_bottom = 208.0

[node name="Mengo Stage" type="Button" parent="Placeholder buttons"]
offset_left = 208.0
offset_top = 176.0
offset_right = 240.0
offset_bottom = 208.0

[node name="Pump Man Stage" type="Button" parent="Placeholder buttons"]
offset_left = 280.0
offset_top = 176.0
offset_right = 312.0
offset_bottom = 208.0

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(448, 240)
scale = Vector2(2, 2)
texture = ExtResource("7_l4mmt")
hframes = 9
frame = 4

[node name="Module Tester" parent="." instance=ExtResource("8_s4a3g")]
layout_mode = 1
offset_left = 334.0
offset_top = 130.0
offset_right = 334.0
offset_bottom = 130.0

[connection signal="pressed" from="Placeholder buttons/Test Stage" to="." method="_on_test_stage_pressed"]
[connection signal="pressed" from="Placeholder buttons/Air Man Stage" to="." method="_on_air_man_stage_pressed"]
[connection signal="pressed" from="Placeholder buttons/Mengo Stage" to="." method="_on_mengo_stage_pressed"]
[connection signal="pressed" from="Placeholder buttons/Pump Man Stage" to="." method="_on_pump_man_stage_pressed"]
